Fixed linenums width not working on ios

--- a/css/editor.css
+++ b/css/editor.css
@@ -1,67 +1,69 @@
 #scroll-right {
-    color: white;
-    margin: 0px;
-    padding: 0px;
-    display: grid;
-    grid-template-columns: 40px 20px;
-    overflow-y: scroll;
-    height: 100%;
+  color: white;
+  margin: 0px;
+  padding: 0px;
+  display: grid;
+  overflow-y: scroll;
+  height: 100%;
+  grid-template-columns: 40px 25px;
 }
 
 #editing,
 #highlighting,
 #linenums,
 #pointer-container {
-    font-size: 15pt;
-    font-family: monospace;
-    line-height: 20pt;
-    resize: none;
+  font-size: 15pt;
+  font-family: monospace;
+  line-height: 20pt;
+  resize: none;
 }
 
 #pointer-container {
-    background-color: hsl(213, 12%, 15%);
-    grid-column: 1;
-    text-align: right;
+  background-color: hsl(213, 12%, 15%);
+  grid-column: 1;
+  text-align: right;
 }
 
 #editing,
 #highlighting {
-    grid-column: 3;
-    grid-row: 1;
-    margin: 0px;
-    padding: 0px;
+  grid-column: 3;
+  grid-row: 1;
+  margin: 0px;
+  padding: 0px;
+  padding-top: 3px;
 }
 
 #editing {
-    color: transparent;
-    background: transparent;
-    caret-color: white;
-    color: transparent;
-    border: none;
+  color: transparent;
+  background: transparent;
+  caret-color: white;
+  color: transparent;
+  border: none;
 }
 
 #editing:focus {
-    outline: none !important;
-    border: none;
-    box-shadow: 0 0 10px #719ece;
+  outline: none !important;
+  border: none;
+  box-shadow: 0 0 10px #719ece;
 }
 
 pre,
 code {
-    white-space: pre-line;
+  white-space: pre-line;
 }
 
 #linenums {
-    background-color: hsl(213, 12%, 15%);
-    color: white;
-    border: none;
-    text-align: right;
-    overflow: hidden;
-    padding-right: 10px;
-    grid-column: 2;
+  background-color: hsl(213, 12%, 15%);
+  color: white;
+  border: none;
+  text-align: right;
+  overflow: hidden;
+  padding-right: 10px;
+  grid-column: 2;
+  margin: 0px;
 }
 
 #linenums:focus {
-    outline: none !important;
-    border: none;
+  outline: none !important;
+  border: none;
 }
