--- a/css/split.css
+++ b/css/split.css
@@ -1,18 +1,18 @@
 #split {
-    display: flex;
-    flex-direction: row;
-    height: 95%;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: calc(100% - 50px);
 }
 
 .gutter {
-    background-color: #eee;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-color: lightgray;
+  background-color: #eee;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-color: lightgray;
 }
 
 .gutter.gutter-horizontal {
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
-    cursor: col-resize;
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
+  cursor: col-resize;
 }
